<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="_true">True</string>
    <string name="_false">False</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="next">next</string>
    <string name="prev">prev </string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer">Show Answer</string>
    <string name="cheat">Cheat!</string>
    <string name="judgment_alert">Cheating is wrong.</string>
    <string name="cheats_left">Cheats left: </string>
</resources>
