<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_true"
                />

            <Button
                android:id="@+id/btnFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/arrow_left"
                android:text="@string/prev"
                />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow_right"
                android:text="@string/next"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnCheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
